--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title></title>
+    <title>Countdown Clock</title>
   </head>
 
   <body>
-    <!-- This is where your HTML goes, feel free to delete example content :) -->
-    <main class="container">
-      <img src="./images/hello.jpg">
-      <img src="/images/hello.jpg">
-      <img src="images/hello.jpg">  
+    <main>
+      <section id="left-container"></section>
     </main>
   </body>
 </html>
